1. 调整组件实例编辑
Change-Id: Icc1b0b973e3942d2d0d986e70553c59cd3049f69